[package]
name = "mdbook-classy"
version = "0.1.0"

authors = ["Doug Bradshaw <dhbradshaw@gmail.com>", "Reece McMillin <reecemcmillin@gmail.com>"]
categories = ["command-line-utilities"]
description = "An mdbook preprocessor for adding html-css classes to markdown."
edition = "2021"
exclude = [
    "examples/*",
]
homepage = "https://github.com/reviewable/mdbook-classy"
keywords = ["mdbook", "classy", "markdown", "commonmark","css"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reviewable/mdbook-classy"

[dependencies]
clap = "3.0.7"
mdbook = "0.4"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "9.0"
serde_json = "1.0"

nom = "7.1.0"
